--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     api 'org.aspectj:aspectjrt:1.9.5'
+    implementation 'com.apkfuns.logutils:library:1.7.5'
 }
